--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "setup front for a aplication web in monoku. ",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server"
+    "start": "webpack-dev-server --progress --inline --hot"
   },
   "repository": {
     "type": "git",
